# InterviewSystem

./: .gitignore  API_Documentation.md  README.md  face_expression_py3.x_demo.py  http_demo.py  language.py  package-lock.json  sparkos_interactive.py  todo.md
backend/: MICRO_EXPRESSION_INTEGRATION.md  app.py  check_resume.py  config.py  db_config.py  debug_records.py  init_database.py  langgraph_agent.py  langsmith_agent.py  llm_api.py  models.py  requirements.txt  routes.py  sdk_client.py  sdk_wrapper.py  speech_recognition.py  (+1 more)
cpp_server/: .gitignore  82e7fa93ase  CMakeLists.txt  IMAGE_RECOGNITION_API.md  README.md  build.sh  comprehensive_test.py  project_summary.sh  test_api.sh  test_demo.py  test_image_api.py  test_image_simple.py  test_integration.py  test_report_20250725_172613.json
cpp_server/config/: server_config.json
cpp_server/files/ilog_v1/: 1753435465948  1753450368044  1753451124255  1753451825067  1753452814228  1753452851711  1753453397453  1753453805936  1753454860850  1753455414013  1753455733793  1753456131084  1753456138259  1753456840960  1753456846037  1753458308180
cpp_server/files/logan_cache/: logan.mmap2
cpp_server/include/: server.h
cpp_server/include/common/: types.h
cpp_server/include/handlers/: asr_handler.h  base_handler.h  health_handler.h  image_recognition_handler.h  llm_handler.h  tts_handler.h
cpp_server/include/services/: audio_service.h  image_service.h  llm_service.h
cpp_server/include/utils/: audio_converter.h  file_utils.h  json_utils.h  logger.h
cpp_server/src/: main.cpp  server.cpp
cpp_server/src/handlers/: asr_handler.cpp  base_handler.cpp  health_handler.cpp  image_recognition_handler.cpp  llm_handler.cpp  tts_handler.cpp
cpp_server/src/services/: audio_service.cpp  image_service.cpp  llm_service.cpp
cpp_server/src/utils/: audio_converter.cpp  file_utils.cpp  json_utils.cpp  logger.cpp
(+22 files in other folders)
